Fix Datatable and Add Handle Error in API

--- a/AspAPI/Views/Department/Index.cshtml
+++ b/AspAPI/Views/Department/Index.cshtml
@@ -61,6 +61,7 @@
                                     <th>Id</th>
                                     <th>Name</th>
                                     <th>Create Date</th>
+                                    <th>Update Date</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
@@ -79,7 +80,7 @@
 
 @section scripts{
     <!-- All Jquery -->
-    <script src="~/Content/Mini AdminPro/assets/plugins/jquery/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
     <script src="~/Content/Mini AdminPro/assets/plugins/bootstrap/js/popper.min.js"></script>
     <script src="~/Content/Mini AdminPro/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
@@ -95,18 +96,10 @@
     <script src="~/Content/Mini AdminPro/main/js/custom.min.js"></script>
     <!-- This is data table -->
     <script src="~/Content/Mini AdminPro/assets/plugins/datatables/jquery.dataTables.min.js"></script>
-    <script src="~/Content/Mini AdminPro/assets/plugins/jqueryui/jquery-ui.js"></script>
-    <!-- start - This is for export functionality only -->
-    <script src="https://cdn.datatables.net/buttons/1.2.2/js/dataTables.buttons.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.2.2/js/buttons.flash.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js"></script>
-    <script src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js"></script>
-    <script src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.2.2/js/buttons.html5.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.2.2/js/buttons.print.min.js"></script>
-    <!-- end - This is for export functionality only -->
+    <!-- This is Sweetalert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9.10.9/dist/sweetalert2.all.min.js"></script>
     <script src="~/Content/Mini AdminPro/assets/plugins/moment/moment.js"></script>
+    <script src="https://momentjs.com/downloads/moment-timezone-with-data.js"></script>
     @*Script Department JS*@
     <script src="~/Scripts/Department.js"></script>
     <!-- Style switcher -->
