Add Division API

--- a/AspAPI/Views/Shared/_Layout.cshtml
+++ b/AspAPI/Views/Shared/_Layout.cshtml
@@ -355,17 +355,17 @@
                     <ul id="sidebarnav">
                         <li class="nav-small-cap">Menu</li>
                         <li>
-                            <a href="@Url.Action("Index","About")">
-                                <i class="fa fa-question-circle-o"></i><span class="hide-menu">
-                                    About
+                            <a href="@Url.Action("Index","Department")">
+                                <i class="fa fa-building-o"></i><span class="hide-menu">
+                                    Department
                                     @*<span class="label label-rounded label-success">5</span>*@
                                 </span>
                             </a>
                         </li>
                         <li>
-                            <a href="@Url.Action("Index","Contact")">
-                                <i class="fa fa-phone"></i><span class="hide-menu">
-                                    Contact
+                            <a href="@Url.Action("Index","Division")">
+                                <i class="fa fa-user-o"></i><span class="hide-menu">
+                                    Division
                                     @*<span class="label label-rounded label-success">5</span>*@
                                 </span>
                             </a>
