--- a/AspAPI/Views/Department/Index.cshtml
+++ b/AspAPI/Views/Department/Index.cshtml
@@ -23,8 +23,8 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" id="Cancel" data-dismiss="modal">Cancel</button>
-                <button type="submit" class="btn btn-success" id="Save" onclick="Save()">Simpan</button>
-                <button type="submit" class="btn btn-warning" id="Edit" onclick="Edit()">Update</button>
+                <button type="submit" class="btn btn-success" id="Save" onclick="Save()">Save</button>
+                <button type="submit" class="btn btn-warning" id="Edit" onclick="Edit()">Save Change</button>
             </div>
         </div>
     </div>
@@ -58,7 +58,6 @@
                         <table id="DataTable1" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0">
                             <thead>
                                 <tr>
-                                    <th>Id</th>
                                     <th>Name</th>
                                     <th>Create Date</th>
                                     <th>Update Date</th>
