--- a/AspAPI/Views/Department/Index.cshtml
+++ b/AspAPI/Views/Department/Index.cshtml
@@ -52,16 +52,20 @@
         <div class="col-12">
             <div class="card">
                 <div class="card-body">
-                    @*<h4 class="card-title">Data Export</h4>
-                        <h6 class="card-subtitle">You can Export data to Soft Copy, CSV, Excel, PDF & Print</h6>*@
-                    <div class="table-responsive m-t-40">
-                        <table id="DataTable1" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0">
+                    <h4 class="card-title">Data Export</h4>
+                    <span class="card-subtitle">Export data To :</span>
+                        <a href="/Department/ExportToCSV" class="btn btn-outline-dark">CSV</a>
+                        <a href="/Department/ExportToExcel" class="btn btn-outline-dark">Excel</a>
+                        <a href="/Department/ExportToPDF" class="btn btn-outline-dark">PDF</a>
+                    <hr />
+                    <div class="table-responsive">
+                        <table id="DataTable1" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
                             <thead>
                                 <tr>
-                                    <th>Name</th>
-                                    <th>Create Date</th>
-                                    <th>Update Date</th>
-                                    <th>Action</th>
+                                    <th>Nama Department</th>
+                                    <th>Tanggal Dibuat</th>
+                                    <th>Tanggal Diubah</th>
+                                    <th>Aksi</th>
                                 </tr>
                             </thead>
                             <tbody class="BodyTable">
@@ -95,6 +99,16 @@
     <script src="~/Content/Mini AdminPro/main/js/custom.min.js"></script>
     <!-- This is data table -->
     <script src="~/Content/Mini AdminPro/assets/plugins/datatables/jquery.dataTables.min.js"></script>
+    <!-- start - This is for export functionality only -->
+    <script src="https://cdn.datatables.net/buttons/1.2.2/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.2.2/js/buttons.flash.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js"></script>
+    <script src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js"></script>
+    <script src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.2.2/js/buttons.html5.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.2.2/js/buttons.print.min.js"></script>
+    <!-- end - This is for export functionality only -->
+
     <!-- This is Sweetalert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9.10.9/dist/sweetalert2.all.min.js"></script>
     <script src="~/Content/Mini AdminPro/assets/plugins/moment/moment.js"></script>
