--- a/AspAPI/Views/Division/Index.cshtml
+++ b/AspAPI/Views/Division/Index.cshtml
@@ -57,8 +57,11 @@
         <div class="col-12">
             <div class="card">
                 <div class="card-body">
-                    @*<h4 class="card-title">Data Export</h4>
-                        <h6 class="card-subtitle">You can Export data to Soft Copy, CSV, Excel, PDF & Print</h6>*@
+                    <h4 class="card-title">Data Export</h4>
+                    <span class="card-subtitle">Export data To :</span>
+                    <a href="/Division/ExportToCSV" class="btn btn-outline-dark">CSV</a>
+                    <a href="/Division/ExportToExcel" class="btn btn-outline-dark">Excel</a>
+                    <a href="/Division/ExportToPDF" class="btn btn-outline-dark">PDF</a>
                     <div class="table-responsive m-t-40">
                         <table id="DataTable1" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0">
                             <thead>
